Refine admin dashboard design - more elegant and polished

--- a/admin.html
+++ b/admin.html
@@ -29,17 +29,16 @@
       <section class="admin-hero">
         <p class="eyebrow">Accès restreint</p>
         <h1 class="section-title">Panel d'administration</h1>
-        <p class="section-subtitle">Ajoutez des produits, gérez les commandes et mettez à jour le site. Code requis : <strong>L1_TRIANGLE</strong>.</p>
+        <p class="section-subtitle">Ajoutez des produits, gérez les commandes et mettez à jour le site.</p>
       </section>
 
       <section class="admin-card" id="admin-login">
-        <h2>Entrer le code d'accès</h2>
-        <p class="admin-desc">Saisissez le code <strong>L1_TRIANGLE</strong> pour déverrouiller le tableau de bord.</p>
+        <h2>Authentification requise</h2>
+        <p class="admin-desc">Saisissez votre code d'accès pour continuer.</p>
         <div class="admin-form">
           <input type="password" id="admin-code" placeholder="Code d'accès" />
           <button id="admin-submit" class="btn-shop-now" type="button">Déverrouiller</button>
         </div>
-        <p class="admin-hint">Indice : code fourni par l'équipe L1-TRIANGLE.</p>
         <p class="admin-error" id="admin-error" aria-live="polite"></p>
       </section>
 
