--- a/index.html
+++ b/index.html
@@ -197,18 +197,9 @@
       </div>
     </section>
 
-    <!-- Featured Products Placeholder for API -->
-    <section class="products-section" id="produits" aria-label="Produits vedettes">
+    <!-- Products Section -->
+    <section class="products-section" id="produits" aria-label="Nos produits">
       <div class="container">
-        <div class="section-heading">
-          <div>
-            <p class="eyebrow">Bientôt connecté à l'API</p>
-            <h2 class="section-title">Produits vedettes</h2>
-            <p class="section-subtitle">Affichage dynamique dès l'ajout de l'API. En attendant, voici un aperçu.</p>
-          </div>
-          <a class="btn-secondary" href="https://wa.me/50939945794" target="_blank" rel="noreferrer">Parler au support</a>
-        </div>
-
         <div id="products-grid" class="products-grid" aria-live="polite"></div>
       </div>
     </section>
