Fix GitHub Pages - Produits par défaut intégrés

--- a/admin.html
+++ b/admin.html
@@ -84,6 +84,7 @@
     </div>
   </main>
   <script src="js/api.js"></script>
+  <script src="js/products-data.js"></script>
   <script>
     const ACCESS_CODE='L1_TRIANGLE';
     let products=[],orders=[],uploadedImage=null;
