--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
     <button class="scroll-top-btn" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" aria-label="Remonter">↑</button>
 
     <script src="js/api.js"></script>
+    <script src="js/products-data.js"></script>
     <script src="js/site.js"></script>
   </body>
 </html>
