--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="hero-section" id="hero">
       <div class="hero-bg">
         <video autoplay muted loop playsinline preload="metadata" class="hero-video">
-          <source src="Hailuo_Video__I want you to create a visual_448266720662994952 (1).mp4" type="video/mp4" />
+          <source src="hero-video.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="container">
@@ -403,8 +403,8 @@
             <h4 class="footer-heading">Contact</h4>
             <ul class="footer-contact">
               <li>📍 Morne Hercule, Petion-Ville, Port-au-Prince</li>
-              <li>📞 +509 39 94 57 94</li>
-              <li>✉️ l1triangle.info@gmail.com</li>
+              <li><a href="tel:+50939945794">📞 +509 3994 5794</a></li>
+              <li><a href="mailto:l1triangle.info@gmail.com">✉️ l1triangle.info@gmail.com</a></li>
             </ul>
           </div>
         </div>
