--- a/admin.html
+++ b/admin.html
@@ -50,28 +50,15 @@
           <form id="product-form">
             <div class="form-group"><label>Titre *</label><input type="text" name="title" required></div>
             <div class="form-group"><label>Description *</label><textarea name="desc" required></textarea></div>
-            <div class="form-group"><label>Catégorie *</label><select name="category" required><option value="">Choisir</option><option value="Accessoires">Accessoires</option><option value="Moniteurs">Moniteurs</option><option value="Kit Vape">Kit Vape</option><option value="Manettes">Manettes</option><option value="Consoles">Consoles</option><option value="Autre">Autre</option></select></div>
-            <div style="display:grid;grid-template-columns:1fr 1fr;gap:1rem">
-              <div class="form-group"><label>Prix (HTG) *</label><input type="number" name="price" step="0.01" min="0" required></div>
-              <div class="form-group"><label>Badge</label><input type="text" name="badge"></div>
-            </div>
-            <div class="form-group"><label>Méta</label><input type="text" name="meta" placeholder="Stock, délai..."></div>
+            <div class="form-group"><label>Catégorie *</label><select name="category" required><option value="">Choisir</option><option value="Accessoires">Accessoires</option><option value="Moniteurs">Moniteurs</option><option value="Manettes">Manettes</option><option value="Consoles">Consoles</option><option value="Autre">Autre</option></select></div>
+            <div class="form-group"><label>Prix (HTG) *</label><input type="number" name="price" step="0.01" min="0" required></div>
             <div class="form-group">
               <label>Image *</label>
               <div id="url-tab" class="tab-content active">
-                <input type="url" id="image-url" placeholder="https://...">
+                <input type="url" id="image-url" placeholder="https://..." required>
                 <div class="image-preview empty" id="url-preview">Aperçu</div>
               </div>
-              <div id="upload-tab" class="tab-content">
-                <div class="file-input-wrapper">
-                  <input type="file" id="file-input" accept="image/*">
-                  <label class="file-input-label" for="file-input">Cliquez</label>
-                </div>
-                <div class="image-preview empty" id="upload-preview">Aperçu</div>
-              </div>
             </div>
-            <div class="form-group"><label><input type="checkbox" name="badgeAlt" style="margin-right:.5rem">Badge violet</label></div>
-            <div class="form-group"><label>Lien WhatsApp</label><input type="url" name="link" placeholder="https://wa.me/..."></div>
             <button type="submit" class="btn-primary">✨ Ajouter</button>
           </form>
         </div>
@@ -83,12 +70,61 @@
       </div>
     </div>
   </main>
-  <script src="js/api.js"></script>
-  <script src="js/products-data.js"></script>
   <script>
+    // API Supabase directement intégrée
+    const SUPABASE_URL = 'https://fiofrgaiwosyzrddlhln.supabase.co';
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpb2ZyZ2Fpd29zeXpyZGRsaGxuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU1MTE0ODIsImV4cCI6MjA4MTA4NzQ4Mn0.Aj5H-tAA5TVcywF2GY2pO409UbCd0jw7lTdZE6LVpSU';
+
+    async function apiRequest(endpoint, options = {}) {
+      const url = `${SUPABASE_URL}/rest/v1${endpoint}`;
+      const config = {
+        ...options,
+        headers: {
+          'Content-Type': 'application/json',
+          'apikey': SUPABASE_KEY,
+          'Authorization': `Bearer ${SUPABASE_KEY}`,
+          'Prefer': 'return=representation',
+          ...options.headers
+        }
+      };
+      const response = await fetch(url, config);
+      if (!response.ok) throw new Error(`HTTP ${response.status}`);
+      return await response.json();
+    }
+
+    async function getProducts() {
+      return await apiRequest('/products?select=*');
+    }
+
+    async function createProduct(product) {
+      const result = await apiRequest('/products', {
+        method: 'POST',
+        body: JSON.stringify(product)
+      });
+      return result[0];
+    }
+
+    async function deleteProduct(id) {
+      await apiRequest(`/products?id=eq.${id}`, { method: 'DELETE' });
+      return { success: true };
+    }
+
+    async function getOrders() {
+      return await apiRequest('/orders?select=*');
+    }
+
+    async function updateOrder(id, updates) {
+      const result = await apiRequest(`/orders?id=eq.${id}`, {
+        method: 'PATCH',
+        body: JSON.stringify(updates)
+      });
+      return result[0];
+    }
+
+    // Code Admin
     const ACCESS_CODE='L1_TRIANGLE';
     let products=[],orders=[],uploadedImage=null;
-    const loginSection=document.getElementById('login-section'),dashboardContent=document.getElementById('dashboard-content'),codeInput=document.getElementById('admin-code'),loginBtn=document.getElementById('admin-login-btn'),errorEl=document.getElementById('admin-error'),productForm=document.getElementById('product-form'),fileInput=document.getElementById('file-input'),imageUrlInput=document.getElementById('image-url'),toggleFormBtn=document.getElementById('toggle-form'),formPanel=document.getElementById('form-panel'),productsGrid=document.getElementById('products-grid'),tabButtons=document.querySelectorAll('.img-tab');
+    const loginSection=document.getElementById('login-section'),dashboardContent=document.getElementById('dashboard-content'),codeInput=document.getElementById('admin-code'),loginBtn=document.getElementById('admin-login-btn'),errorEl=document.getElementById('admin-error'),productForm=document.getElementById('product-form'),imageUrlInput=document.getElementById('image-url'),toggleFormBtn=document.getElementById('toggle-form'),formPanel=document.getElementById('form-panel'),productsGrid=document.getElementById('products-grid');
 
     function showNotification(m,t='info'){const n=document.createElement('div');n.className=`notification ${t}`;n.textContent=m;document.body.appendChild(n);setTimeout(()=>{n.classList.add('out');setTimeout(()=>n.remove(),300)},3000)}
 
@@ -102,21 +138,17 @@
 
     toggleFormBtn.addEventListener('click',()=>{formPanel.classList.toggle('admin-hidden');formPanel.classList.contains('admin-hidden')||formPanel.scrollIntoView({behavior:'smooth'})});
 
-    fileInput.addEventListener('change',e=>{const f=e.target.files[0];if(!f||!f.type.startsWith('image/'))return showNotification('❌ Image requise','error');const r=new FileReader();r.onload=t=>{uploadedImage=t.target.result;document.getElementById('upload-preview').innerHTML=`<img src="${uploadedImage}" alt="p">`;document.getElementById('upload-preview').classList.remove('empty');showNotification('✓ Image chargée','success')};r.readAsDataURL(f)});
-
     imageUrlInput.addEventListener('input',e=>{const u=e.target.value.trim(),p=document.getElementById('url-preview');if(!u){p.classList.add('empty');p.innerHTML='Aperçu';uploadedImage=null;return}const i=new Image();i.onload=()=>{p.innerHTML=`<img src="${u}" alt="p">`;p.classList.remove('empty');uploadedImage=u};i.onerror=()=>{p.classList.add('empty');p.innerHTML='⚠️ Erreur'};i.src=u});
 
-    tabButtons.forEach(b=>b.addEventListener('click',e=>{e.preventDefault();tabButtons.forEach(x=>x.classList.remove('active'));b.classList.add('active');document.querySelectorAll('.tab-content').forEach(t=>t.classList.remove('active'));document.getElementById(b.dataset.tab).classList.add('active')}));
+    productForm.addEventListener('submit',async e=>{e.preventDefault();if(!uploadedImage){showNotification('❌ Image requise','error');return}try{const fd=new FormData(productForm),p={title:fd.get('title'),description:fd.get('desc'),category:fd.get('category'),price:Number(fd.get('price'))||0,image:uploadedImage};if(!p.title||!p.description||!p.category){showNotification('❌ Remplissez tous les champs','error');return}if(p.price<=0){showNotification('❌ Prix > 0','error');return}await createProduct(p);uploadedImage=null;imageUrlInput.value='';document.getElementById('url-preview').classList.add('empty');document.getElementById('url-preview').innerHTML='Aperçu';await loadProducts();productForm.reset();formPanel.classList.add('admin-hidden');showNotification('✅ Produit ajouté!','success')}catch(err){console.error(err);showNotification('❌ '+err.message,'error')}});
 
-    productForm.addEventListener('submit',async e=>{e.preventDefault();if(!uploadedImage){showNotification('❌ Image requise','error');return}try{const fd=new FormData(productForm),p={title:fd.get('title'),desc:fd.get('desc'),category:fd.get('category'),price:Number(fd.get('price'))||0,badge:fd.get('badge'),meta:fd.get('meta'),badgeAlt:'on'===fd.get('badgeAlt'),link:fd.get('link'),image:uploadedImage};if(!p.title||!p.desc||!p.category){showNotification('❌ Remplissez les champs requis','error');return}if(p.price<=0){showNotification('❌ Prix > 0','error');return}const r=await window.L1API.addProduct(p);if(r.success){uploadedImage=null;fileInput.value='';imageUrlInput.value='';document.getElementById('url-preview').classList.add('empty');document.getElementById('url-preview').innerHTML='Aperçu';document.getElementById('upload-preview').classList.add('empty');document.getElementById('upload-preview').innerHTML='Aperçu';await loadProducts();productForm.reset();formPanel.classList.add('admin-hidden');showNotification('✅ Produit ajouté!','success')}else{showNotification('❌ '+r.error,'error')}}catch(err){showNotification('❌ '+err.message,'error')}});
+    async function loadProducts(){try{products=await getProducts();renderProducts();updateStats()}catch(err){showNotification('❌ '+err.message,'error')}}
 
-    async function loadProducts(){products=await window.L1API.getProducts();renderProducts();updateStats()}
+    function renderProducts(){productsGrid.innerHTML='';if(!products.length){productsGrid.innerHTML='<p style="grid-column:1/-1;text-align:center;color:var(--text-muted);padding:3rem">Aucun produit</p>';return}products.forEach(p=>{const item=document.createElement('div');item.className='product-item';item.innerHTML=`<div class="product-item-image"><img src="${p.image||'https://via.placeholder.com/280x200?text=Image'}" alt="${p.title}" onerror="this.src='https://via.placeholder.com/280x200?text=No+Image'"></div><div class="product-item-content"><div class="product-item-category">${p.category}</div><div class="product-item-title">${p.title}</div>${p.description?`<div class="product-item-meta">${p.description}</div>`:''}<div class="product-item-footer" style="margin-top:auto"><div class="product-item-price">${(p.price||0).toLocaleString('fr-FR')} HTG</div><div class="product-item-actions"><button class="btn-danger delete-btn" data-id="${p.id}">🗑️</button></div></div></div>`;item.querySelector('.delete-btn').addEventListener('click',async()=>{if(confirm('Supprimer?')){try{await deleteProduct(p.id);await loadProducts();showNotification('✓ Supprimé','success')}catch(e){showNotification('❌ '+e.message,'error')}}});productsGrid.appendChild(item)})}
 
-    function renderProducts(){productsGrid.innerHTML='';if(!products.length){productsGrid.innerHTML='<p style="grid-column:1/-1;text-align:center;color:var(--text-muted);padding:3rem">Aucun produit</p>';return}products.forEach(p=>{const item=document.createElement('div');item.className='product-item';const badge=p.badge?`<div class="product-item-badge ${p.badgeAlt?'alt':''}">${p.badge}</div>`:'';item.innerHTML=`<div class="product-item-image">${badge}<img src="${p.image||'https://via.placeholder.com/280x200?text=Image'}" alt="${p.title}" onerror="this.src='https://via.placeholder.com/280x200?text=No+Image'"></div><div class="product-item-content"><div class="product-item-category">${p.category}</div><div class="product-item-title">${p.title}</div>${p.meta?`<div class="product-item-meta">${p.meta}</div>`:''}<div class="product-item-footer" style="margin-top:auto"><div class="product-item-price">${(p.price||0).toLocaleString('fr-FR')} HTG</div><div class="product-item-actions"><button class="btn-danger delete-btn" data-id="${p.id}">🗑️</button></div></div></div>`;item.querySelector('.delete-btn').addEventListener('click',async()=>{if(confirm('Supprimer?')){const res=await window.L1API.deleteProduct(p.id);res.success?(await loadProducts(),showNotification('✓ Supprimé','success')):showNotification('❌ Erreur','error')}});productsGrid.appendChild(item)})}
+    async function loadOrders(){try{orders=await getOrders();renderOrders();updateStats()}catch(err){showNotification('❌ '+err.message,'error')}}
 
-    async function loadOrders(){orders=await window.L1API.getOrders();renderOrders();updateStats()}
-
-    function renderOrders(){const list=document.getElementById('orders-list');list.innerHTML='';if(!orders.length){list.innerHTML='<p style="text-align:center;color:var(--text-muted);padding:2rem">Aucune commande</p>';return}orders.forEach(o=>{const card=document.createElement('div');card.className='order-card';const items=(o.items||[]).map(i=>`• ${i.title} ×${i.quantity||1}`).join('<br>');card.innerHTML=`<div class="order-header"><div class="order-id">🛒 #${o.id}</div><div class="order-status ${o.status}">${'pending'===o.status?'⏳ Attente':'completed'===o.status?'✅ Terminée':'❌ Annulée'}</div></div><div class="order-details"><strong>👤 ${o.customerName||'N/A'}</strong><br>📧 ${o.customerEmail||'N/A'}<br>📱 ${o.customerPhone||'N/A'}</div><div class="order-items">${items}</div><div class="order-details">💰 ${(o.total||0).toLocaleString('fr-FR')} HTG<br>🕐 ${new Date(o.createdAt).toLocaleString('fr-FR')}</div><div class="order-actions"><button class="btn-success complete-btn" data-id="${o.id}">✅</button><button class="btn-danger cancel-btn" data-id="${o.id}">❌</button></div>`;card.querySelector('.complete-btn').addEventListener('click',async()=>{const res=await window.L1API.updateOrder(o.id,{status:'completed'});res.success?(await loadOrders(),showNotification('✓ Terminée','success')):showNotification('❌ Erreur','error')});card.querySelector('.cancel-btn').addEventListener('click',async()=>{const res=await window.L1API.updateOrder(o.id,{status:'cancelled'});res.success?(await loadOrders(),showNotification('✓ Annulée','success')):showNotification('❌ Erreur','error')});list.appendChild(card)})}
+    function renderOrders(){const list=document.getElementById('orders-list');list.innerHTML='';if(!orders.length){list.innerHTML='<p style="text-align:center;color:var(--text-muted);padding:2rem">Aucune commande</p>';return}orders.forEach(o=>{const card=document.createElement('div');card.className='order-card';const items=(o.items||[]).map(i=>`• ${i.title} ×${i.quantity||1}`).join('<br>');card.innerHTML=`<div class="order-header"><div class="order-id">🛒 #${o.id.substring(0,8)}</div><div class="order-status ${o.status}">${'pending'===o.status?'⏳ Attente':'completed'===o.status?'✅ Terminée':'❌ Annulée'}</div></div><div class="order-details"><strong>📧 ${o.customer_email||'N/A'}</strong><br>📱 ${o.customer_phone||'N/A'}</div><div class="order-items">${items}</div><div class="order-details">💰 ${(o.total||0).toLocaleString('fr-FR')} HTG<br>🕐 ${new Date(o.created_at).toLocaleString('fr-FR')}</div><div class="order-actions"><button class="btn-success complete-btn" data-id="${o.id}">✅</button><button class="btn-danger cancel-btn" data-id="${o.id}">❌</button></div>`;card.querySelector('.complete-btn').addEventListener('click',async()=>{try{await updateOrder(o.id,{status:'completed'});await loadOrders();showNotification('✓ Terminée','success')}catch(e){showNotification('❌ '+e.message,'error')}});card.querySelector('.cancel-btn').addEventListener('click',async()=>{try{await updateOrder(o.id,{status:'cancelled'});await loadOrders();showNotification('✓ Annulée','success')}catch(e){showNotification('❌ '+e.message,'error')}});list.appendChild(card)})}
 
     function updateStats(){document.getElementById('stat-products').textContent=products.length;document.getElementById('stat-orders').textContent=orders.length;document.getElementById('stat-pending').textContent=orders.filter(o=>'pending'===o.status).length}
 
