--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     <!-- Hero Section -->
     <section class="hero-section" id="hero">
       <div class="hero-bg">
-        <video autoplay muted loop playsinline preload="metadata" class="hero-video">
+        <video autoplay muted loop playsinline preload="metadata" class="hero-video" poster="IMG-20251117-WA0045(1).jpg">
           <source src="hero-video.mp4" type="video/mp4" />
+          <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="container">
