fix: align admin categories with site filters; keep hero video visible on mobile (pause only on Data Saver)

--- a/admin.html
+++ b/admin.html
@@ -50,7 +50,7 @@
           <form id="product-form">
             <div class="form-group"><label>Titre *</label><input type="text" name="title" required></div>
             <div class="form-group"><label>Description *</label><textarea name="desc" required></textarea></div>
-            <div class="form-group"><label>Catégorie *</label><select name="category" required><option value="">Choisir</option><option value="Accessoires">Accessoires</option><option value="Moniteurs">Moniteurs</option><option value="Manettes">Manettes</option><option value="Consoles">Consoles</option><option value="Autre">Autre</option></select></div>
+            <div class="form-group"><label>Catégorie *</label><select name="category" required><option value="">Choisir</option><option value="accessoires">Accessoires</option><option value="moniteurs">Moniteurs</option><option value="manettes">Manettes</option><option value="consoles">Consoles</option><option value="kit-vape">Kit Vape</option><option value="autres">Autres</option></select></div>
             <div class="form-group"><label>Prix (HTG) *</label><input type="number" name="price" step="0.01" min="0" required></div>
             <div class="form-group">
               <label>Image *</label>
