fix: remove flower fallback video, keep only original hero-video.mp4

--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
     <!-- Hero Section -->
     <section class="hero-section" id="hero">
       <div class="hero-bg">
-        <video autoplay muted loop playsinline preload="metadata" class="hero-video" poster="IMG-20251117-WA0045(1).jpg" onerror="this.style.opacity='0.2'">
-          <source src="hero-video.mp4" type="video/mp4" onerror="console.log('Local video not found, using fallback')" />
-          <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
-          Votre navigateur ne supporte pas les vidéos HTML5.
+        <video autoplay muted loop playsinline preload="metadata" class="hero-video" poster="IMG-20251117-WA0045(1).jpg">
+          <source src="hero-video.mp4" type="video/mp4" />
         </video>
       </div>
       <div class="container">
