feat: link Shop Now button to products section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h1 class="hero-title">L1-TRIANGLE</h1>
           <p class="hero-subtitle">La nouvelle référence du gaming en Haïti</p>
           <div class="hero-actions">
-            <a class="btn-shop-now" href="#categories">Shop Now</a>
+            <a class="btn-shop-now" href="#produits">Shop Now</a>
             <a class="btn-secondary" href="https://wa.me/50939945794" target="_blank" rel="noreferrer">Commander sur WhatsApp</a>
           </div>
         </div>
