--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>L1-TRIANGLE — La nouvelle référence du gaming en Haïti</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <meta name="application-name" content="L1-TRIANGLE" />
     <meta property="og:site_name" content="L1-TRIANGLE" />
   </head>
@@ -413,7 +413,7 @@
 
     <button class="scroll-top-btn" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" aria-label="Remonter">↑</button>
 
-    <script src="js/api.js"></script>
-    <script src="js/site.js"></script>
+    <script src="api.js"></script>
+    <script src="site.js"></script>
   </body>
 </html>
